9282:Bug - Column Misalignment - (Funtionality)

--- a/applications/Unity.GrantManager/src/Unity.GrantManager.Web/Pages/GrantApplications/Details.css
+++ b/applications/Unity.GrantManager/src/Unity.GrantManager.Web/Pages/GrantApplications/Details.css
@@ -146,9 +146,7 @@
     margin-top: 1rem;
 }
 
-.dataTables_scrollHeadInner {
-    width: auto !important;
-}
+
 
 .recom-select {
     background: #003366;
